--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+body {
+  font: Roboto sans-serif;
+}
+
 #div1{
   background-image: url(assets/images/Rectangle112.svg);
 }
@@ -6,4 +10,14 @@
   border-top: none;
   border-left: none;
   border-right: none;
+}
+@media(min-width:769px){
+  #carouselExampleControls{
+    display: none;
+  }
+}
+@media(max-width:768px){
+  #grid{
+    display: none;
+  }
 }
